feat: android release doc dance

--- a/android/24.1.md
+++ b/android/24.1.md
@@ -1,5 +1,5 @@
 <p>
-  This documentation is for the Countly Android SDK version 24.4.X. The SDK source
+  This documentation is for the Countly Android SDK version 24.1.X. The SDK source
   code repository can be found
   <a href="https://github.com/Countly/countly-sdk-android">here</a>.
 </p>
@@ -15,7 +15,7 @@
   17).
 </p>
 <p>
-  To examine the example integrations please have a look
+  To examine example integrations please have a look
   <a href="#h_01HND059CTVC4QBVMB6P4CSVE7">here</a>.
 </p>
 <h1 id="h_01HAVQDM5SZRDX323EDDTNNMEF">Adding the SDK to the Project</h1>
@@ -31,7 +31,7 @@
   <span style="font-weight: 400;">Now, add the Countly SDK dependency (</span><strong>use the latest SDK version currently available from gradle, not specifically the one shown in the sample below</strong><span style="font-weight: 400;">).</span>
 </p>
 <pre><code class="java">dependencies {
-  implementation 'ly.count.android:sdk:24.4.0'
+  implementation 'ly.count.android:sdk:24.1.0'
 }</code></pre>
 <h1 id="h_01HAVQDM5SKEGK68HD5082KAZH">SDK Integration</h1>
 <p>
@@ -58,6 +58,18 @@
     <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KXE6YKVETHDWPP8J3K" target="_blank" rel="noopener">here</a>.
   </p>
 </div>
+<h2 id="h_01HAVQDM5S6PHPV8SAQ32HDXXT">SDK Logging</h2>
+<p>
+  <span style="font-weight: 400;">The first thing you should do while integrating our SDK is enable logging. If logging is enabled, then our SDK will print out debug messages about its internal state and encountered problems. Those messages may be screened in logcat and may use Android's internal log calls.</span>
+</p>
+<p>
+  Call&nbsp;<code>setLoggingEnabled</code>&nbsp;on the config class to enable logging:
+</p>
+<pre><code>CountlyConfig config = (<span>new </span>CountlyConfig(appC, <span>COUNTLY_APP_KEY</span>, <span>COUNTLY_SERVER_URL</span>));<br>config.setLoggingEnabled(<span>true</span>);</code></pre>
+<p>
+  For more information on where to find the SDK logs you can check the documentation
+  <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KXC5S8Q1NQWDZ33HXC" target="blank">here</a>.
+</p>
 <h2 id="h_01HAVQDM5SXG0Q4MRTDYXJRA8H">Adding callbacks</h2>
 <p>
   After the&nbsp;<code>Countly.sharedInstance().init(...)</code><span style="font-weight: 400;">call, you'll need to add the following calls to all your activities:</span>
@@ -86,18 +98,6 @@
   <span style="font-weight: 400;">Additionally, ensure the&nbsp;</span><em><span style="font-weight: 400;">INTERNET</span></em><span style="font-weight: 400;">&nbsp;and&nbsp;</span><em><span style="font-weight: 400;">ACCESS_NETWORK_STATE</span></em><span style="font-weight: 400;">&nbsp;permissions are set if there aren’t any, in your manifest file. Those calls should look something like this:</span>
 </p>
 <pre><code>&lt;uses-permission android:name="android.permission.INTERNET"/&gt;<br>&lt;uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /&gt;</code></pre>
-<h1 id="h_01HAVQDM5S6PHPV8SAQ32HDXXT">SDK Logging</h1>
-<p>
-  <span style="font-weight: 400;">The first thing you should do while integrating our SDK is enable logging. If logging is enabled, then our SDK will print out debug messages about its internal state and encountered problems. Those messages may be screened in logcat and may use Android's internal log calls.</span>
-</p>
-<p>
-  Call <code>setLoggingEnabled</code> on the config class to enable logging:
-</p>
-<pre><code>CountlyConfig config = (<span>new </span>CountlyConfig(appC, <span>COUNTLY_APP_KEY</span>, <span>COUNTLY_SERVER_URL</span>));<br>config.setLoggingEnabled(<span>true</span>);</code></pre>
-<p>
-  For more information on where to find the SDK logs you can check the documentation
-  <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KXC5S8Q1NQWDZ33HXC" target="blank">here</a>.
-</p>
 <h1 id="h_01HAVQDM5SSRZASQPBFV5YG0QV">Crash Reporting</h1>
 <p>
   <span style="font-weight: 400;">The Countly SDK for Android has the ability to collect&nbsp;</span><a href="https://support.count.ly/hc/en-us/articles/4404213566105"><span style="font-weight: 400;">crash reports</span></a><span style="font-weight: 400;">,</span><span style="font-weight: 400;">&nbsp;which you may examine and resolve later on the server.</span>
@@ -213,97 +213,27 @@ CountlyNative.initNative(getApplicationContext());</code></pre>
 </p>
 <h2 id="h_01HAVQDM5TVAQT2CSB5JN46Y1P">Symbolication</h2>
 <p>
-  <span style="font-weight: 400;">You may create Breakpad symbol files yourself and upload them to your Countly server using our UI. They will be needed to create stack traces from minidump files. Countly also developed a Gradle plugin to automate this process. To use the upload plugin in Studio, you first need to include it:</span>
+  <span style="font-weight: 400;">You may create Breakpad symbol files yourself and upload them to your Countly server using our UI. They will be needed to create stack traces from minidump files. Countly also developed a Gradle plugin to automate this process. To use the upload plugin in Studio, you first need to include it (the LATEST_VERSION is currently 23.8.3):</span>
 </p>
 <h3 id="h_01HAVQDM5TDW9QZDBDY4PWKSBV">Automatic symbol file upload</h3>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">build.gradle</span>
-    <span class="tabs-link">build.gradle.kts</span>
-  </div>
-  <div class="tab">
-    <pre><code class="java">plugins {
-  id "ly.count.android.plugins.upload-symbols" version "24.4.0"
+<pre><code class="java">apply plugin: ly.count.android.plugins.UploadSymbolsPlugin
+
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+  // for LATEST_VERSION check &lt;https://search.maven.org/artifact/ly.count.android/sdk&gt;
+  dependencies {
+    classpath group: 'ly.count.android', 'name': 'sdk-plugin', 'version': 'LATEST_VERSION'
+  }
 }</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="java">plugins {
-  id("ly.count.android.plugins.upload-symbols") version "24.4.0"
-}</code></pre>
-  </div>
-</div>
-<p>
-  If you have root level gradle file and want to enable the plugin for sub-projects,
-  add <code>apply false</code> to the end of the lines. And in sub-projects add
-  it to <code>plugins</code> block without version part.
-</p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">build.gradle</span>
-    <span class="tabs-link">build.gradle.kts</span>
-  </div>
-  <div class="tab">
-    <pre><code class="java">// in root level gradle file
-plugins {
-  id "ly.count.android.plugins.upload-symbols" version "24.4.0" apply false
-}
-    
-// in sub-project gradle file
-plugins {
-  id "ly.count.android.plugins.upload-symbols"
-}</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="java">// in root level gradle file
-plugins {
-  id("ly.count.android.plugins.upload-symbols") version "24.4.0" apply false
-}
-    
-// in sub-project gradle file
-plugins {
-  id("ly.count.android.plugins.upload-symbols")
-}</code></pre>
-  </div>
-</div>
-<p>
-  If you do not have <code>plugins</code> block in sub-projects, you can add them
-  via:
-</p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">build.gradle</span>
-    <span class="tabs-link">build.gradle.kts</span>
-  </div>
-  <div class="tab">
-    <pre><code class="java">apply plugin: ly.count.android.plugins.UploadSymbolsPlugin
-</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="java">apply(plugin = "ly.count.android.plugins.upload-symbols")
-</code></pre>
-  </div>
-</div>
 <p>
   <span style="font-weight: 400;">Then you will need to configure a Gradle Countly block for the plugin:</span>
 </p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">build.gradle</span>
-    <span class="tabs-link">build.gradle.kts</span>
-  </div>
-  <div class="tab">
-    <pre><code class="java">countly {
+<pre><code class="java">countly {
   server "https://YOUR_SERVER"
   app_key "YOUR_APP_KEY"  
 }</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="java">countly {
-  server = "https://YOUR_SERVER"
-  app_key = "YOUR_APP_KEY"  
-}</code></pre>
-  </div>
-</div>
 <p>
   Next, you will have two new Gradle tasks available to you:
   <code>uploadJavaSymbols</code> and <code>uploadNativeSymbols</code>.
@@ -336,13 +266,7 @@ plugins {
 <p>
   <span style="font-weight: 400;">In addition, you may also override some default values in the Countly block in an effort to specify your server and app info.</span>
 </p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">build.gradle</span>
-    <span class="tabs-link">build.gradle.kts</span>
-  </div>
-  <div class="tab">
-    <pre><code class="java">countly {
+<pre><code class="java">countly {
   // required by both tasks
   server "https://try.count.ly"
   app_key "XXXXXX"  // same app_key used for SDK integration
@@ -365,38 +289,11 @@ plugins {
   // path for breakpad tool dump_syms executable
   dumpSymsPath "/usr/bin/dump_syms" // note that will be saved with the upload and can be checked in the UI noteNative "sdk-plugin automatic upload of breakpad symbols" }
 }</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="java">countly {
-  // required by both tasks
-  server = "https://try.count.ly"
-  app_key = "XXXXXX"  // same app_key used for SDK integration
-
-  // optional properties for uploadJavaSymbols. Shown are the default values.
-
-  // location of mapping.txt file relative to project build directory
-  mappingFile = "outputs/mapping/release/mapping.txt"
-
-  // note that will be saved with the upload and can be checked in the UI
-  noteJava = "sdk-plugin automatic upload of mapping.txt"
-
-  // optional properties for uploadNativeSymbols. Shown are the default values.
-
-  // directory of .so files relative to project build directory.
-  // you can check the tar.gz file created under intermediates/countly
-  // BUILD_TYPE could be debug or release
-  nativeObjectFilesDir = "intermediates/merged_native_libs/BUILD_TYPE"
-
-  // path for breakpad tool dump_syms executable
-  dumpSymsPath = "/usr/bin/dump_syms" // note that will be saved with the upload and can be checked in the UI noteNative "sdk-plugin automatic upload of breakpad symbols" }
-}</code></pre>
-  </div>
-</div>
 <p>
-  <span style="font-weight: 400;">It is possible that two of these properties will need to be configured manually: <code>dumpSymsPath</code></span><span style="font-weight: 400;"> and <code>nativeObjectFilesDir</code></span><span style="font-weight: 400;">. The plugin assumes you will run the task after a release build. To test it for debug builds, please change <code>nativeObjectFilesDir</code></span><span style="font-weight: 400;"> to <code>"intermediates/cmake/debug/obj"</code></span><span style="font-weight: 400;"> (or to wherever your build process puts .so files under the build directory).</span>
+  <span style="font-weight: 400;">It is possible that two of these properties will need to be configured manually: <code>dumpSymsPath</code></span><span style="font-weight: 400;">&nbsp;and <code>nativeObjectFilesDir</code></span><span style="font-weight: 400;">. The plugin assumes you will run the task after a release build. To test it for debug builds, please change <code>nativeObjectFilesDir</code></span><span style="font-weight: 400;">&nbsp;to <code>"intermediates/cmake/debug/obj"</code></span><span style="font-weight: 400;">&nbsp;(or to wherever your build process puts .so files under the build directory).</span>
 </p>
 <p>
-  <span style="font-weight: 400;">We created a </span><a href="https://github.com/Countly/countly-sdk-android/tree/master/app-native"><span style="font-weight: 400;">sample app</span></a><span style="font-weight: 400;"> in our github repo that demonstrates both how to use SDK-native and our upload plugin.</span>
+  <span style="font-weight: 400;">We created a&nbsp;</span><a href="https://github.com/Countly/countly-sdk-android/tree/master/app-native"><span style="font-weight: 400;">sample app</span></a><span style="font-weight: 400;">&nbsp;in our github repo that demonstrates both how to use SDK-native and our upload plugin.</span>
 </p>
 <h1 id="h_01HAVQDM5T91A747VG56537NN9">Events</h1>
 <p>
@@ -563,7 +460,7 @@ Countly.sharedInstance().events().cancelEvent(eventName);</code></pre>
 <p>
   <span style="font-weight: 400;">View tracking is a way to report every screen view to the Countly dashboard. In order to enable automatic view tracking, call:</span>
 </p>
-<pre><code class="java">config.enableAutomaticViewTracking();</code></pre>
+<pre><code class="java">config.setViewTracking(true);</code></pre>
 <p>
   The tracked views will use the full activity names which include their package
   name. It would look similar to "com.my.company.activityname".
@@ -571,13 +468,21 @@ Countly.sharedInstance().events().cancelEvent(eventName);</code></pre>
 <p>
   <span style="font-weight: 400;">It is possible to use short view names that make use of the simple activity name. This would look like "activityname". To use this functionality, call this before calling init:</span>
 </p>
-<pre><code class="java">config.enableAutomaticViewShortNames();</code></pre>
+<pre><code class="java">config.setAutoTrackingUseShortName(true);</code></pre>
+<h3 id="h_01HAVQDM5TN6T6FVYTKY855FHM">Automatic View Segmentation</h3>
 <p>
-  If you want to add segmentation to all your automatic views, please have a look
-  <a href="#h_01HHNZ0MAP34090BTSV1KAYD4J">here</a>.
+  It's possible to provide custom segmentation that will be set to all automatically
+  recorded views:
 </p>
+<pre><code class="java">Map&lt;String, Object&gt; automaticViewSegmentation = new HashMap&lt;&gt;();
+automaticViewSegmentation.put("One", 2);
+automaticViewSegmentation.put("Three", 4.44d);
+automaticViewSegmentation.put("Five", "Six");
+
+config.setAutomaticViewSegmentation(automaticViewSegmentation);</code></pre>
+<h3 id="h_01HHNWEKDGQXAB9R2XAN4FBJYZ">Automatic View Exceptions</h3>
 <p>
-  If you want to exclude certain activities from automatic view tracking, you can
+  I you want to exclude certain activities from automatic view tracking you can
   let the SDK know during initialization by passing them in an array:
 </p>
 <pre><code class="java">config.setAutomaticViewTrackingExclusions(Class[] exclusions);</code></pre>
@@ -685,26 +590,21 @@ Countly.sharedInstance().views().stopAllViews(viewSegmentation);</code></pre>
 <p>
   <span style="font-weight: 400;">To add segmentation to a view using its view ID:</span>
 </p>
-<pre><code class="java">String viewID = Countly.sharedInstance().views().startView("View Name");
-
-Map&lt;String, Object&gt; viewSegmentation = new HashMap&lt;&gt;();
+<pre><code class="java">Map&lt;String, Object&gt; viewSegmentation = new HashMap&lt;&gt;();
 viewSegmentation.put("Cats", 123);
 viewSegmentation.put("Moons", 9.98d);
 viewSegmentation.put("Moose", "Deer");
   
-Countly.sharedInstance().views().addSegmentationToViewWithID(viewID, viewSegmentation);</code></pre>
+Countly.sharedInstance().views().addSegmentationToViewWithID("View ID", viewSegmentation);</code></pre>
 <p>
   <span style="font-weight: 400;">To add segmentation to a view using its name:</span>
 </p>
-<pre><code class="java">String viewName = "View Name";
-Countly.sharedInstance().views().startView(viewName);
-  
-Map&lt;String, Object&gt; viewSegmentation = new HashMap&lt;&gt;();
+<pre><code class="java">Map&lt;String, Object&gt; viewSegmentation = new HashMap&lt;&gt;();
 viewSegmentation.put("Cats", 123);
 viewSegmentation.put("Moons", 9.98d);
 viewSegmentation.put("Moose", "Deer");
   
-Countly.sharedInstance().views().addSegmentationToViewWithName(viewName, viewSegmentation);</code></pre>
+Countly.sharedInstance().views().addSegmentationToViewWithName("View Name", viewSegmentation);</code></pre>
 <h2 id="h_01HHNZ0MAP34090BTSV1KAYD4J">Global View Segmentation</h2>
 <p>
   <span style="font-weight: 400;">You can set a global segmentation to be send with all views when it ends:</span>
@@ -756,13 +656,6 @@ Countly.sharedInstance().views().updateGlobalViewSegmentation(viewSegmentation);
   (merged) into user profile with device id you specified in the following method
   call:
 </p>
-<div class="callout callout--warning">
-  <p>
-    <strong>Performance risk.</strong> Changing device id with server merging
-    results in huge load on server as it is rewriting all the user history. This
-    should be done only once per user.
-  </p>
-</div>
 <pre><code class="java">Countly.sharedInstance().deviceId().changeWithMerge("new device ID")</code></pre>
 <p>
   In other circumstances, you might want to track information about another separate
@@ -854,7 +747,7 @@ Type idType = Countly.sharedInstance().deviceId().getType();</code></pre>
   present in the system, Countly would try to get HMS token instead. It's possible
   to alter this behaviour by supplying HMS as a preferred provider:
 </p>
-<pre><code class="java">CountlyConfigPush countlyConfigPush = new CountlyConfigPush(this).setProvider(Countly.CountlyMessagingProvider.HMS);
+<pre><code class="java">CountlyConfigPush countlyConfigPush = new CountlyConfigPush(this, Countly.CountlyMessagingMode.PRODUCTION).setProvider(Countly.CountlyMessagingProvider.HMS);
 CountlyPush.init(countlyConfigPush);</code></pre>
 <h2 id="h_01HAVQDM5T196CVPSG134PEDGQ">Integration</h2>
 <p>
@@ -880,28 +773,28 @@ CountlyPush.init(countlyConfigPush);</code></pre>
         channel.setDescription(getString(R.string.countly_channel_description));
         notificationManager.createNotificationChannel(channel);
       }
-    }
+  }
 
-    CountlyConfig config = new CountlyConfig(this, COUNTLY_APP_KEY, COUNTLY_SERVER_URL)
-      .setLoggingEnabled(true);
-    Countly.sharedInstance().init(config);
-  
-    CountlyConfigPush countlyConfigPush = new CountlyConfigPush(this);
-    CountlyPush.init(countlyConfigPush);
-    FirebaseInstanceId.getInstance().getInstanceId()
-      .addOnCompleteListener(new OnCompleteListener&lt;InstanceIdResult&gt;() {
-        @Override
+  Countly.sharedInstance()
+          .setLoggingEnabled(true)
+          .init(this, "http://try.count.ly", "APP_KEY");
+
+  CountlyConfigPush countlyConfigPush = new CountlyConfigPush(this, Countly.CountlyMessagingMode.PRODUCTION);
+  CountlyPush.init(countlyConfigPush);
+  FirebaseInstanceId.getInstance().getInstanceId()
+    .addOnCompleteListener(new OnCompleteListener&lt;InstanceIdResult&gt;() {
+      @Override
         public void onComplete(@NonNull Task&lt;InstanceIdResult&gt; task) {
           if (!task.isSuccessful()) {
             Log.w(TAG, "getInstanceId failed", task.getException());
             return;
           }
-  
+
           // Get new Instance ID token
           String token = task.getResult().getToken();
             CountlyPush.onTokenRefresh(token);
           }
-      });
+    });
   }
 }</code></pre>
 <p>
@@ -941,15 +834,15 @@ CountlyPush.init(countlyConfigPush);</code></pre>
   You can set the allowed package and class names for Intent Redirection using
   this call:
 </p>
-<pre><code class="java">List&lt;String&gt; allowedClassNames = new ArrayList&lt;&gt;();
+<pre><code class="java">ListallowedClassNames = new ArrayList&lt;&gt;();
 allowedClassNames.add("MainActivity");
-List&lt;String&gt; allowedPackageNames = new ArrayList&lt;&gt;();
+List allowedPackageNames = new ArrayList&lt;&gt;();
 allowedPackageNames.add(getPackageName());
 
-CountlyConfigPush countlyConfigPush = new CountlyConfigPush(this)
+CountlyConfigPush countlyConfigPush = new CountlyConfigPush(this, Countly.CountlyMessagingMode.PRODUCTION)
   .setAllowedIntentClassNames(allowedClassNames)
   .setAllowedIntentPackageNames(allowedPackageNames);
-CountlyPush.init(countlyConfigPush);</code></pre>
+CountlyPush.init(countlyConfigPush);&lt;/&gt;&lt;/&gt;</code></pre>
 <p>
   Please follow provider-specific instructions for Firebase and / or Huawei Push
   Kit below.
@@ -994,7 +887,7 @@ implementation 'com.google.firebase:firebase-messaging:23.1.2'</code></pre>
   private static final String TAG = "DemoMessagingService";
 
   @Override
-  public void onNewToken(@NotNull String token) {
+  public void onNewToken(String token) {
     super.onNewToken(token);
 
     Log.d("DemoFirebaseService", "got new token: " + token);
@@ -1002,7 +895,7 @@ implementation 'com.google.firebase:firebase-messaging:23.1.2'</code></pre>
   }
 
   @Override
-  public void onMessageReceived(@NotNull RemoteMessage remoteMessage) {
+  public void onMessageReceived(RemoteMessage remoteMessage) {
     super.onMessageReceived(remoteMessage);
 
     Log.d("DemoFirebaseService", "got new message: " + remoteMessage.getData());
@@ -1258,7 +1151,7 @@ channel.setSound(soundUri, audioAttributes);</code></pre>
 <p>
   <span style="font-weight: 400;">In order to enable this functionality, you will need to call the following function before initializing Countly messaging:</span>
 </p>
-<pre><code class="java">countlyConfig.setPushIntentAddMetadata(true);</code></pre>
+<pre><code class="java">Countly.sharedInstance().setPushIntentAddMetadata(true);</code></pre>
 <p>
   <span style="font-weight: 400;">To access those extras from the intent, you should use these names:</span>
 </p>
@@ -1304,13 +1197,14 @@ ProxyActivity.intentExtraWhichButton</code></pre>
 </p>
 <ul>
   <li>
-    enter <code>https://YOUR_COUNTLY_SERVER/i/pushes/huawei</code> into the callback
-    address field, while replacing YOUR_COUNTLY_SERVER with actual server address;
+    enter&nbsp;<code>https://YOUR_COUNTLY_SERVER/i/pushes/huawei</code> into
+    the callback address field, while replacing YOUR_COUNTLY_SERVER with actual
+    server address;
   </li>
   <li>
     and enter your certificate in PEM format (only your certificate, without
     the rest of the chain; usually first one in
-    <code>openssl s_client -connect YOUR_COUNTLY_SERVER:443 -showcerts</code>).
+    <code>openssl s_client -connect YOUR_COUNTLY_SERVER:443 -showcerts</code>).&nbsp;
   </li>
 </ul>
 <p>
@@ -1674,24 +1568,13 @@ Countly.sharedInstance().init(config);</code></pre>
   <span style="font-weight: 400;">This star rating has nothing to do with the Google Play Store ratings and reviews. It is just for getting brief feedback from users to be displayed on the Countly dashboard. If the user dismisses the star-rating dialog without providing a rating, the event will not be recorded.</span>
 </p>
 <p>
-  <span style="font-weight: 400;">The star-rating dialog's title, message, and dismiss button text may be customized through the countly configuration.</span>
+  <span style="font-weight: 400;">The star-rating dialog's title, message, and dismiss button text may be customized either through the init function or the <code>SetStarRatingDialogTexts</code></span><span style="font-weight: 400;">&nbsp;function. If you don't want to override one of those values, set it to "null".</span>
 </p>
-<pre><code class="java">CountlyConfig config = new CountlyConfig(this, COUNTLY_APP_KEY, COUNTLY_SERVER_URL);
-config.setStarRatingSessionLimit(LIMIT);
-config.setStarRatingCallback(new StarRatingCallback() {
-    @Override public void onRate(int rating) {
-        Log.i(Countly.TAG, "Rating: " + rating);
-    }
+<pre><code class="java">//set it through the init function
+Countly.sharedInstance().init(context, serverURL, appKey, deviceID, idMode, starRatingLimit, starRatingCallback, "Custom title", "Custom message", "Custom dismiss button text");
 
-    @Override public void onDismiss() {
-        Log.i(Countly.TAG, "Rating dialog was dismissed");
-    }
-});
-config.setStarRatingTextTitle("Custom title");
-config.setStarRatingTextMessage("Custom message");
-config.setStarRatingTextDismiss("Custom dismiss button text");
-
-Countly.sharedInstance().init(config);
+//Use the designated function:
+Countly.sharedInstance().setStarRatingDialogTexts(context, "Custom title", "Custom message", "Custom dismiss button text");
 </code></pre>
 <p>
   <span style="font-weight: 400;">The star-rating dialog can be displayed in 2 ways:</span>
@@ -1704,46 +1587,49 @@ Countly.sharedInstance().init(config);
   <span style="font-weight: 400;">In order to display the star-rating dialog manually, you must call the <code>ShowStarRating</code></span><span style="font-weight: 400;">&nbsp;function. Optionally, you may provide the callback functions. There is no limit on how many times the star-rating dialog may be displayed manually.</span>
 </p>
 <pre><code class="java">//show the star rating without a callback
-Countly.sharedInstance().ratings().showStarRating(activity, null);
+Countly.sharedInstance().showStarRating(context, null);
 
 //show the star rating with a callback
-Countly.sharedInstance().ratings().showStarRating(activity, callback)</code></pre>
+Countly.sharedInstance().showStarRating(context, callback)</code></pre>
 <p>
-  <span style="font-weight: 400;">The star-rating dialog will be displayed automatically when an application's session count reaches the specified limit, i.e. once for each new version of the application. This session count limit may be specified upon initial configuration or through the <code>SetAutomaticStarRatingSessionLimit</code></span><span style="font-weight: 400;">&nbsp;function. The default limit is 5. Once the star-rating dialog has been displayed automatically, it will not be displayed again, unless a new app version comes along.</span>
+  <span style="font-weight: 400;">The star-rating dialog will be displayed automatically when an application's session count reaches the specified limit, i.e. once for each new version of the application. This session count limit may be specified upon initial configuration or through the <code>SetAutomaticStarRatingSessionLimit</code></span><span style="font-weight: 400;">&nbsp;function. The default limit is 3. Once the star-rating dialog has been displayed automatically, it will not be displayed again, unless a new app version comes along.</span>
 </p>
 <p>
-  <span style="font-weight: 400;">You will need to pass the activity context during init to show the automatic star-rating dialog.</span>
+  <span style="font-weight: 400;">You will need to pass the activity context during init in order to show the automatic star-rating dialog.</span>
 </p>
-<pre><code class="java">//set the rating limit through the configuration
+<pre><code class="java">//set the rating limit through the init function
 int starRatingLimit = 5;
-config.setStarRatingSessionLimit(starRatingLimit);</code></pre>
+Countly.sharedInstance().init(context, serverURL, appKey, deviceID, idMode, starRatingLimit, starRatingCallback, starRatingTextTitle, starRatingTextMessage, starRatingTextDismiss);
+
+//set it through the designated function
+Countly.sharedInstance().starRatingLimit(context, 5);</code></pre>
 <p>
   <span style="font-weight: 400;">If you would like to enable the automatic star-rating function, use the <code>SetIfStarRatingShownAutomatically</code></span><span style="font-weight: 400;">&nbsp;function, it is disabled by default.</span>
 </p>
 <pre><code class="java">//enable automatic star rating
-config.setIfStarRatingShownAutomatically(true);
+Countly.sharedInstance().ratings().setIfStarRatingShownAutomatically(true);
 
 //disable automatic star rating
-config.setIfStarRatingShownAutomatically(false);</code></pre>
+Countly.sharedInstance().ratings().setIfStarRatingShownAutomatically(false);</code></pre>
 <p>
   <span style="font-weight: 400;">If you would like to have the star rating shown only once per app's lifetime and not for each new version, use the <code>SetStarRatingDisableAskingForEachAppVersion</code> function.</span>
 </p>
 <pre><code class="java">//disable star rating for each new version
-config.setStarRatingDisableAskingForEachAppVersion(true);
+Countly.sharedInstance().setStarRatingDisableAskingForEachAppVersion(true);
 
 //enable star rating for each new version
-config.setStarRatingDisableAskingForEachAppVersion(false);</code></pre>
+Countly.sharedInstance().setStarRatingDisableAskingForEachAppVersion(false);</code></pre>
 <p>
   <span style="font-weight: 400;">The star-rating callback provides functions for two events. <code>OnRate</code></span><span style="font-weight: 400;">&nbsp;is called when the user chooses a rating. <code>OnDismiss</code></span><span style="font-weight: 400;">&nbsp;is called when the user clicks the back button, clicks outside the dialog, or clicks the "Dismiss" button. The callback provided in the init function is only used when displaying the automatic star rating. Only the provided callback will be used for the manual star rating.</span>
 </p>
 <pre><code class="java">StarRatingCallback callback = new StarRatingCallback() {
   @Override
-  public void onRate(int rating) {
+  public void OnRate(int rating) {
     //the user rated the app
   }
 
   @Override
-  public void onDismiss() {
+  public void OnDismiss() {
     //the star rating dialog was dismissed
   }
 };</code></pre>
@@ -2329,7 +2215,7 @@ String[] certificates = new String[] {
     + "PTJ7eeMmX9g/0h"
 };
 
-CountlyConfig countlyConfig = new CountlyConfig(getApplicationContext(), COUNTLY_APP_KEY, COUNTLY_SERVER_URL);
+CountlyConfig countlyConfig = new CountlyConfig(getApplicationContext(), "c4608d0a021b1cef0f8cb031f51200e9cbe48dd4", "https://try.count.ly");
 countlyConfig.enablePublicKeyPinning(certificates);
 Countly.sharedInstance().init(countlyConfig);</code></pre>
 <p>
@@ -2344,29 +2230,11 @@ Countly.sharedInstance().init(countlyConfig);</code></pre>
 </p>
 <h2 id="h_01HAVQDM5WB4SK90KZYJE329MK">Using Proguard</h2>
 <p>
-  The Countly Android SDK does not require specific proguard exclusions and can
-  be fully obfuscated.
+  <span style="font-weight: 400;">Proguard obfuscates the Messaging classes. If you use Countly Messaging in your application, you will need to add the following lines to your Proguard rules file:</span>
 </p>
+<pre><code class="java">-keep class ly.count.android.sdk.** {*; }</code></pre>
 <p>
-  If you are using the Huawei Push Kit for Push Notifications, make sure to add
-  these recommended proguard rules
-</p>
-<pre><code class="java">-ignorewarnings
--keepattributes *Annotation*
--keepattributes Exceptions
--keepattributes InnerClasses
--keepattributes Signature
--keepattributes SourceFile,LineNumberTable
--keep class com.huawei.hianalytics.**{*;}
--keep class com.huawei.updatesdk.**{*;}
--keep class com.huawei.hms.**{*;}</code></pre>
-<p>
-  For the most up-to-date Huawei Push Kit proguard rules recommendations, have
-  a look
-  <a href="https://developer.huawei.com/consumer/en/doc/HMSCore-Guides/android-config-obfuscation-scripts-0000001050176973">here</a>.
-</p>
-<p>
-  More info about proguard, obfuscation, and code shrinking can be found
+  More info can be found
   <a href="https://developer.android.com/studio/build/shrink-code#keep-code" target="_blank" rel="noopener">here</a>.
 </p>
 <h1 id="h_01HAVQDM5WSC106V395S088B7G">Other Features and Notes</h1>
@@ -2690,7 +2558,7 @@ config.setHttpPostForced(false);
 <pre><code class="java">HashMap&lt;String, String&gt; customHeaderValues = new HashMap&lt;&gt;();
 customHeaderValues.put("foo", "bar");
 
-config.addCustomNetworkRequestHeaders(customHeaderValues);</code></pre>
+Countly.sharedInstance().addCustomNetworkRequestHeaders(customHeaderValues);</code></pre>
 <p>
   <span style="font-weight: 400;">The provided values will override any previously stored value pairs. In case you would like to erase any previously stored pairs, provide <code>null</code>.</span>
 </p>
@@ -2704,17 +2572,14 @@ config.addCustomNetworkRequestHeaders(customHeaderValues);</code></pre>
   version for some specific variant) or provide either your own custom metrics.
   If you are providing your own custom metrics, you would need your own custom
   plugin server-side which would interpret it appropriately. If there is no plugin
-  to handle those custom values, they will be ignored. You can set these custom
-  metrics while initializing the Countly SDK.
+  to handle those custom values, they will be ignored.
 </p>
 <pre><code class="java">//provide custom metric values
-CountlyConfig config = ... // configuration related to implementation
-
-Map&lt;String, String&gt; metricOverride = new HashMap&lt;&gt;();
+Map&lt;string, string="String"&gt; metricOverride = new HashMap&lt;&gt;();
 metricOverride.put("SomeKey", "123");
 metricOverride.put("_app_version", "custom_version-123");
 
-config.setMetricOverride(metricOverride);</code></pre>
+setMetricOverride(metricOverride);</code></pre>
 <p>
   For more information on the specific metric keys used by Countly, check
   <a href="https://support.count.ly/hc/en-us/articles/9290669873305#h_01HABT18WWYQ2QYPZY3GHZBA9B" target="_self">here</a>.
@@ -2796,6 +2661,11 @@ messageReceiver = new BroadcastReceiver() {
 IntentFilter filter = new IntentFilter();
 filter.addAction(CountlyMessaging.getBroadcastAction(getApplicationContext()));
 registerReceiver(messageReceiver, filter);</code></pre>
+<h2 id="h_01HAVQDM5WVPT3XKJ34J970NPA">Checking If onStart Has Been Called</h2>
+<p>
+  <span style="font-weight: 400;">For some applications, there might a use case where the developer would like to check if the Countly SDK <code>onStart</code></span><span style="font-weight: 400;">&nbsp;function has been called. To do so, they may use the following call:</span>
+</p>
+<pre><code class="java">Countly.sharedInstance().hasBeenCalledOnStart();</code></pre>
 <h2 id="h_01HAVQDM5W40D12YAEZ9SW29KK">Ignoring App Crawlers</h2>
 <p>
   <span style="font-weight: 400;">Sometimes server data might be polluted with app crawlers which are not real users, and you would like to ignore them. Starting from the 17.05 release, it's possible to ignore app crawlers by filtering on the app level. The current version does that, using device names. Internally, the Countly SDK has a list of crawler device names. If a device name matches one from that list, no information is sent to the server. </span>
@@ -2983,7 +2853,7 @@ Countly.sharedInstance().requestQueue().addDirectRequest(requestMap);</code></pr
   You can download a map of all A/B testing parameters (keys) and variants associated
   with it:
 </p>
-<pre><code class="java">Countly.sharedInstance().remoteConfig().testingDownloadVariantInformation(RCVariantCallback completionCallback)</code></pre>
+<pre><code class="java">Countly.sharedInstance().remoteConfig().TestingDownloadVariantInformation(RCVariantCallback completionCallback)</code></pre>
 <p>
   You can provide an RCVariantCallback (which is optional) to be called when the
   fetching process ends. Depending on the situation, this would return a RequestResponse
@@ -3066,6 +2936,32 @@ Countly.sharedInstance().requestQueue().addDirectRequest(requestMap);</code></pr
   to the
   <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts#h_01HJ5MD0WB97PA9Z04NG2G0AKC">collected informations</a>
   for all SDKs.
+</p>
+<p>
+  * If push notification are used:<br>
+  - The devices push notification token<br>
+  - If the user clicks on the notification then the time of the click and on which
+  button the user has clicked on&nbsp;
+</p>
+<p>
+  * If automatic view tracking is enabled, it will collect:<br>
+  - activity class name&nbsp;
+</p>
+<p>
+  * If feedback or rating widgets are used, it will collect the users input and
+  time of the widgets completion
+</p>
+<p>
+  * When events are recorded, the time of when the event is recorded, will be collected
+</p>
+<p>
+  * If the consent feature is used, the SDK will collect and send what consent
+  has been given to the SDK or removed from the SDK
+</p>
+<p>
+  Any other information like data in custom events, location, user profile information
+  or other manual requests depends on what the developer decides to provide and
+  is not collected by the SDK itself.
 </p>
 <h2 id="h_01HAVQDM5W8YY460M5PN3JEGX3">How can I build the Android SDK?</h2>
 <p>
