removed wrong quotes

--- a/flutter/24.1.md
+++ b/flutter/24.1.md
@@ -1483,7 +1483,7 @@ Countly.reportFeedbackWidgetManually(chosenWidget, retrievedWidgetData , reporte
   Using the following call, you can set both the predefined and the custom user
   properties during initialization:
 </p>
-<pre><code class="“JavaScript”">var userProperties = {
+<pre><code class="JavaScript">var userProperties = {
   "customProperty": "custom Value",
   "username": "USER_NAME",
   "email": "USER_EMAIL"
@@ -1494,13 +1494,13 @@ config.setUserProperties(userProperties); </code></pre>
 <p>Ther following calls can be used after init.</p>
 <p>
   If you want to set a single property, you can call
-  <code class="“JavaScript”">Countly.userProfile.setUserProperty(key, value)</code>
+  <code class="JavaScript">Countly.userProfile.setUserProperty(key, value)</code>
 </p>
 <pre>Countly.instance.userProfile.setProperty("specialProperty", "value");
 Countly.instance.userProfile.save();</pre>
 <p>
   If you want to set multiple properties at the same time, you can use:
-  <code class="“JavaScript”">Countly.userProfile.setUserProperties(userProperties)</code>
+  <code class="JavaScript">Countly.userProfile.setUserProperties(userProperties)</code>
 </p>
 <pre><code class="JavaScript">// example for setting user data
 Map&lt;String, Object&gt; userProperties= {
@@ -1519,12 +1519,12 @@ Countly.instance.setUserProperties(userProperties);
 Countly.instance.userProfile.save();</code></pre>
 <p>
   After you have provided the user profile information, you must save it by calling
-  <code class="“JavaScript”">Countly.userProfile.save()</code>. This would then
+  <code class="JavaScript">Countly.userProfile.save()</code>. This would then
   create a request and send it to the server.
 </p>
 <p>
   If you changed your mind and want to clear the currently prepared values, call
-  <code class="“JavaScript”">Countly.userProfile.clear()</code>before calling "save".
+  <code class="JavaScript">Countly.userProfile.clear()</code>before calling "save".
 </p>
 <h2 id="h_01H930GAQ793MEBMSC774K6VFM">Modifying custom data</h2>
 <p>
