--- a/flutter/22.02.md
+++ b/flutter/22.02.md
@@ -1040,12 +1040,12 @@ Countly.reportFeedbackWidgetManually(chosenWidget, retrievedWidgetData , reporte
   Using the following call, you can set both the predefined and the custom user
   properties during initialization:
 </p>
-<pre><code class="“JavaScript”">var userProperties = {<br>    ‘customProperty’: ‘custom Value’,<br>    ‘username’: ‘USER_NAME’,<br>    ‘email’: ‘USER_EMAIL’<br>};<br>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);
+<pre><code class="JavaScript">var userProperties = {<br>    ‘customProperty’: ‘custom Value’,<br>    ‘username’: ‘USER_NAME’,<br>    ‘email’: ‘USER_EMAIL’<br>};<br>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);
 config.setUserProperties(userProperties); </code></pre>
 <h2>Setting Predefined Values</h2>
 <p>
   If you want to set the user data after init, you can use
-  <code class="“JavaScript”">Countly.setUserData(USER_DATA);</code>
+  <code class="JavaScript">Countly.setUserData(USER_DATA);</code>
 </p>
 <p>
   Using the call you can only set the following predefined keys.
